--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,7 @@
     <meta property="twitter:type" content="article" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="theme-color" content="#000000" />
+    <link rel="stylesheet" href="/css/style.css" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Yikai Zhang</title>
   </head>
