--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
         <h1
           style="font-family: Arial, Helvetica, sans-serif;display: block;position: absolute;left: 50%;top: 50%;transform: translate3d(-50%, -50%, 0);"
         >
-          Hi, I'm Yikai, welcome.
+          Hi, I'm Yikai, Welcome.
         </h1>
       </div>
     </div>
